sidebar issues fixed on mobile view

--- a/assets/css/style.bundle.css
+++ b/assets/css/style.bundle.css
@@ -36329,7 +36329,7 @@ body {
     width: 275px !important;
     -webkit-transition: left 0.3s ease, right 0.3s ease;
     transition: left 0.3s ease, right 0.3s ease;
-    /* left: -295px;  */
+    left: -295px;
   }
     .kt-aside.kt-aside--on {
       -webkit-transition: left 0.3s ease, right 0.3s ease;
